<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caodanping.androidcomm.MainActivity"
    android:orientation="vertical">

    <Button
        android:text="@string/labelCollector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnToCollector" />

    <Button
        android:text="@string/btClientTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnBtClientTest" />

    <Button
        android:text="@string/WifiClientTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnWifiClientTest" />

    <Button
        android:text="@string/wifiP2pDiscoveryTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnWifiP2pServiceTest" />
</LinearLayout>
