<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_collector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caodanping.androidcomm.collector.CollectorActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:text="@string/labelX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp"
                android:id="@+id/txtXLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtXVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:text="@string/labelY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp"
                android:id="@+id/txtYLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtYVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:text="@string/labelZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp"
                android:id="@+id/txtZLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtZVal" />
        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/startCollector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnStartCollector"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/labelEnableBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="18dp"
        android:id="@+id/btnEnableBt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/labelEnableDiscovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnableDiscovery"
        android:layout_alignBaseline="@+id/btnEnableBt"
        android:layout_alignBottom="@+id/btnEnableBt"
        android:layout_toRightOf="@+id/btnEnableBt"
        android:layout_toEndOf="@+id/btnEnableBt"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp" />

    <Button
        android:text="@string/enableWifiAp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEnableBt"
        android:layout_alignLeft="@+id/btnEnableBt"
        android:layout_alignStart="@+id/btnEnableBt"
        android:layout_marginTop="12dp"
        android:id="@+id/btnEnableWifiAp" />

    <Button
        android:text="@string/enableWifiP2pDiscovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnEnableWifiAp"
        android:layout_alignLeft="@+id/btnEnableDiscovery"
        android:layout_alignStart="@+id/btnEnableDiscovery"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:id="@+id/btnEnableWifiP2pNsd" />

</RelativeLayout>
